--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,19 @@
-version: '3'
 services:
   monotreme:
     build: .
     container_name: monotreme
     ports:
       - 5231:5231
+    networks:
+      macvlan_network:
+# Keep commented out until docker pulls an IP that's available      
+        ipv4_address: 192.168.1.136
+
     volumes:
-      - monotreme:/var/opt/monotreme
-    depends_on:
-      - monotreme-redis
-    environment:
-      - REDIS_URL=redis://redis:6379
+      - /Primer/Media/data/monotreme:/var/opt/monotreme
     restart: unless-stopped
 
-  monotreme-redis:
-    image: redis:7-alpine
-    container_name: monotreme-redis
-    ports:
-      - 6379:6379
-    volumes:
-      - redis:/data
-    restart: unless-stopped
-    command: redis-server --appendonly yes
-
-  redis-insight:
-    image: redis/redisinsight:latest
-    container_name: monotreme-redisinsight
-    ports:
-      - 5540:5540
-    volumes:
-      - redisinsight:/data
-    restart: unless-stopped
-    depends_on:
-      - monotreme-redis
-
-volumes:
-  monotreme:
-  redis:
-  redisinsight:
+networks:
+  macvlan_network:
+    name: MyMacVlan
+    external: true    
